feat: basic migration java 21 and spring boot 3